-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: core-svc
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246522 | 14u-cpu | Aleksey Shipilev | P4 | Resolved | Fixed | master |
| JDK-8245876 | 14.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b09 |
| JDK-8245857 | 13.0.4 | Aleksey Shipilev | P4 | Resolved | Fixed | b03 |
| JDK-8245879 | 11.0.9 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8246018 | openjdk8u262 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
x86_32:
* For target support_native_jdk.jdwp.agent_libjdwp_classTrack.o:
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c: In function 'cbTrackingObjectFree':
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c:72:42: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
*(char**)bagAdd(deletedSignatures) = (char*)tag;
^
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c: In function 'classTrack_addPreparedClass':
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c:120:61: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
error = JVMTI_FUNC_PTR(trackingEnv, SetTag)(env, klass, (jlong)signature);
^
* For target support_native_jdk.jdwp.agent_libjdwp_classTrack.o:
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c: In function 'cbTrackingObjectFree':
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c:72:42: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
*(char**)bagAdd(deletedSignatures) = (char*)tag;
^
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c: In function 'classTrack_addPreparedClass':
/home/shade/trunks/jdk-jdk/src/jdk.jdwp.agent/share/native/libjdwp/classTrack.c:120:61: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
error = JVMTI_FUNC_PTR(trackingEnv, SetTag)(env, klass, (jlong)signature);
^
- backported by
-
JDK-8245857 x86_32 build failure after JDK-8227269
-
- Resolved
-
-
JDK-8245876 x86_32 build failure after JDK-8227269
-
- Resolved
-
-
JDK-8245879 x86_32 build failure after JDK-8227269
-
- Resolved
-
-
JDK-8246018 x86_32 build failure after JDK-8227269
-
- Resolved
-
-
JDK-8246522 x86_32 build failure after JDK-8227269
-
- Resolved
-
- relates to
-
JDK-8227269 Slow class loading when running with JDWP
-
- Resolved
-
(1 relates to)