8241750: x86_32 build failure after JDK-8227269

Reviewed-by: rkennke, cjplummer